<resources>
    <string name="app_name">Task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="informe_todos_campos">Informe todos os campos!</string>
    <string name="erro_inesperado">Algo de errado aconteceu. Tente novamente!</string>
    <string name="email_em_uso">Email já esta em uso!</string>
    <string name="entrar">Entrar</string>
    <string name="usuario_senha_incorretos">Usuário e/ou senha inválidos!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_completa">Completa</string>
    <string name="selecionar_data">Clique para selecionar a data</string>
    <string name="adicionar_tarefa">Adicionar tarefa</string>
    <string name="descricao">Descrição</string>
    <string name="prioridade">Prioridade</string>
    <string name="tarefa_incluida_sucesso">Tarefa incluida com sucesso!</string>
    <string name="tarefa_alterada_sucesso">Tarefa alterada com sucesso!</string>
    <string name="tarefa_removida_sucesso">Tarefa removida com sucesso</string>
    <string name="atualizar_tarefa">Atualizar tarefa</string>
    <string name="n_o_tem_uma_conta">Não tem uma conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
</resources>
