<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        tools:context=".views.RegisterActivity">

    <EditText android:id="@+id/editName"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:drawableLeft="@drawable/ic_name"
              style="@style/mGrayEditText"
              android:hint="@string/nome"/>

    <EditText android:id="@+id/editEmail"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/editName"
              android:inputType="textEmailAddress"
              style="@style/mGrayEditText"
              android:drawableLeft="@drawable/ic_mail"
              android:hint="@string/email"/>

    <EditText android:id="@+id/editPassword"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/editEmail"
              android:inputType="textPassword"
              android:drawableLeft="@drawable/ic_lock"
              style="@style/mGrayEditText"
              android:hint="@string/senha"/>

    <Button android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:layout_marginTop="50dp"
            style="@style/mWhiteDefaultButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>