<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/linear_background"
        android:padding="@dimen/activity_vertical_margin"
        tools:context=".views.LoginActivity">

    <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="180dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_logotipo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText android:id="@+id/editEmail"
              android:layout_width="0dp"
              android:layout_marginTop="60dp"
              android:layout_height="50dp"
              android:inputType="textEmailAddress"
              android:hint="@string/email"
              app:layout_constraintTop_toBottomOf="@id/imageLogo"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginRight="16dp"
              android:layout_marginLeft="16dp"
              android:drawableLeft="@drawable/ic_user"
              android:drawablePadding="10dp"
              android:elevation="5dp"
              style="@style/mWhiteEditText"/>

    <EditText android:id="@+id/editPassword"
              android:layout_marginRight="16dp"
              android:layout_marginLeft="16dp"
              android:layout_marginTop="16dp"
              android:layout_width="0dp"
              app:layout_constraintTop_toBottomOf="@id/editEmail"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_height="50dp"
              android:inputType="textPassword"
              android:hint="@string/senha"
              android:drawableLeft="@drawable/ic_lock"
              android:drawablePadding="10dp"
              android:elevation="5dp"
              style="@style/mWhiteEditText"/>

    <Button android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/editPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="64dp"
            android:text="@string/entrar"
            style="@style/mWhiteDefaultButton"/>

    <TextView
            android:text="@string/n_o_tem_uma_conta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/mWhiteTextView"
            app:layout_constraintStart_toStartOf="@+id/guideline"
    />
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.18"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.82"/>
    <TextView
            android:text="@string/cadastre_se"
            android:textStyle="bold"
            style="@style/mWhiteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>