<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".views.TaskFormActivity">

    <EditText android:id="@+id/editDescription"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              style="@style/mGrayEditText"
              android:lines="2"
              android:singleLine="false"
              android:hint="@string/descricao"
              android:layout_marginTop="16dp"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toTopOf="parent"/>

    <TextView android:id="@+id/spinnerText"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:text="@string/prioridade"
              android:paddingLeft="25dp"
              android:layout_marginTop="36dp"
              app:layout_constraintTop_toBottomOf="@+id/editDescription"
              app:layout_constraintLeft_toLeftOf="parent"/>

    <Spinner android:id="@+id/spinnerPriority"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/spinnerText"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ececec"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerPriority"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/view2"/>

    <CheckBox android:id="@+id/checkboxComplete"
              android:layout_width="0dp"
              android:layout_height="21dp"
              android:text="@string/check_completa"
              android:button="@drawable/checkbox_selector"
              android:paddingLeft="10dp"
              style="@style/mGrayTextView"
              app:layout_constraintTop_toBottomOf="@+id/view2"
              android:layout_marginTop="24dp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ececec"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/checkboxComplete"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/view3"/>

    <Button android:id="@+id/buttonDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/selecionar_data"
            android:textColor="@color/colorGrayText"
            android:textColorHint="@color/colorGrayText"
            android:background="@android:color/transparent"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ececec"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonDate"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/view4"/>

    <Button android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_tarefa"
            style="@style/mWhiteDefaultButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>